--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,25 @@
 <div class="pl-4 pr-4">
   <h1>Home</h1>
 
+  <p class="important">
+    The names displayed were generated with a random name generator and are not real people!
+  </p>
+
+  <p class="home-box1">
+    ngx-datatable is an Angular component for presenting large and complex data. It has all the
+    features you would expect from any other table but in a light package with no external dependencies.
+    The table was designed to be extremely flexible and light; it doesn't make any assumptions about
+    your data or how you: filter, sort or page it. It also support "row detail" and "row grouping".
+  </p>
+
+  <p class="home-box2">
+    In this demo you can find 3 examples: "filter, sort and  page", "row grouping", "row detail".<br>
+    <a mat-button color="primary" [routerLink]="'/page1'">"filter, sort and  page"</a>
+    <a mat-button color="primary" [routerLink]="'/page2'">"row detail"</a>
+    <a mat-button color="primary" [routerLink]="'/page3'">"row grouping"</a>
+    <br><br>
+    <a href="https://github.com/mastefano64/angular-ngx-datatable" target="_blank">
+      Gitgub project angular-ngx-datatable
+    </a>
+  </p>
 </div>
