--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -1,5 +1,13 @@
 <div>
   <h1>Page-1</h1>
+  <p class="important">
+    The names displayed were generated with a random name generator and are not real people!
+  </p>
+
+  <p class="box1">
+    <a href="https://github.com/mastefano64/angular-ngx-datatable/blob/main/src/app/customer-list1/customer-list1.component.html" target="_blank">Github html template</a>&nbsp;
+    <a href="https://github.com/mastefano64/angular-ngx-datatable/blob/main/src/app/customer-list1/customer-list1.component.ts" target="_blank">Github component</a>&nbsp;
+  </p>
 </div>
 
 <div>
