--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,3 +57,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .form-container50 > * {
   width: 100%;
 }
+
+.important {
+  font-size: 18px;
+  color: red;
+}
