--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,14 @@
     <a mat-button color="primary" [routerLink]="'/page2'">"row detail"</a>
     <a mat-button color="primary" [routerLink]="'/page3'">"row grouping"</a>
     <br><br>
+    <a href="https://swimlane.github.io/ngx-datatable/" target="_blank">
+      Online documentation 1
+    </a>
+    &nbsp;&nbsp;
+    <a href="https://swimlane.gitbook.io/ngx-datatable/" target="_blank">
+      Online documentation 2
+    </a>
+    <br><br>
     <a href="https://github.com/mastefano64/angular-ngx-datatable" target="_blank">
       Gitgub project angular-ngx-datatable
     </a>
